# Copyright (c) 2010 Red Hat, Inc.
#
# Authors: Angus Salkeld <asalkeld@redhat.com>
#
# This file is part of libqb.
#
# libqb is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 2.1 of the License, or
# (at your option) any later version.
#
# libqb is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with libqb.  If not, see <http://www.gnu.org/licenses/>.
#

MAINTAINERCLEANFILES    = Makefile.in
instdir 		= $(includedir)/qb/
inst_HEADERS		= qbhdb.h qblist.h qbdefs.h qbatomic.h \
			  qbloop.h qbrb.h qbutil.h qbarray.h \
			  qbipcc.h qbipcs.h qbipc_common.h qblog.h \
			  qbconfig.h qbmap.h
