# Copyright 2017 Red Hat, Inc.
#
# Authors: Jan Pokorny <jpokorny@redhat.com>
#
# This file is part of libqb.
#
# libqb is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 2.1 of the License, or
# (at your option) any later version.
#
# libqb is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with libqb.  If not, see <http://www.gnu.org/licenses/>.

MAINTAINERCLEANFILES = Makefile.in
EXTRA_DIST = GNUmakefile log_test_client.err log_test_interlib_client.err \
             log_test_client.sh log_test_interlib_client.sh log_test_mock.sh \
             log_callsite_bench_gen.py
SUBDIRS = log_external log_internal
